--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   firebase_messaging: ^15.1.3
   clipboard: ^0.1.3
+  firebase_storage: ^12.3.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
